--- a/frontend/pages/checkout/checkout.html
+++ b/frontend/pages/checkout/checkout.html
@@ -142,7 +142,7 @@
                                     </div>
                                 <hr class="my-4" />
                                 </div>
-                            <h4 class="mb-3">Характеристики</h4>
+                            <h4 class="mb-3">Целевые характеристики</h4>
                                 <div class="col-6">
                                     <label for="cc-name" class="form-label"
                                         >Стартовый капитал</label
@@ -362,7 +362,9 @@
                                             Your username is required.
                                         </div>
                                     </div>
+                                    <hr class="my-4" />
                                 </div>
+                            <h4 class="mb-3">Характеристики аудитории и спроса</h4>
 
                                 <div class="col-md-6">
                                     <label for="cc-cvv" class="form-label"
@@ -470,7 +472,7 @@
                                 class="w-100 btn btn-primary btn-lg"
                                 type="submit"
                             >
-                                Continue to checkout
+                                Продолжить
                             </button>
                         </form>
                     </div>
