--update bug fix

--- a/frontend/pages/checkout/checkout.html
+++ b/frontend/pages/checkout/checkout.html
@@ -52,7 +52,7 @@
                                         required
                                     />
                                     <div class="invalid-feedback">
-                                        Valid first name is required.
+                                        Вы не указали название стартапа
                                     </div>
                                 </div>
 
@@ -69,7 +69,7 @@
                                         required
                                     />
                                     <div class="invalid-feedback">
-                                        Valid last name is required.
+                                        Вы не указали название команды проекта
                                     </div>
                                 </div>
 
@@ -94,7 +94,7 @@
                                         <option>Путешествия</option>
                                     </select>
                                     <div class="invalid-feedback">
-                                        Please select a valid theme.
+                                        Пожалуйста, выберете корректную тему
                                     </div>
                                 </div>
 
@@ -119,7 +119,7 @@
                                         <option>EnergyTech</option>
                                     </select>
                                     <div class="invalid-feedback">
-                                        Please select a valid country.
+                                        Пожалуйста, выберете корректную категорию
                                     </div>
                                 </div>
 
@@ -134,11 +134,7 @@
                                             class="form-control"
                                             id="username"
                                             placeholder="Description"
-                                            required
                                         />
-                                        <div class="invalid-feedback">
-                                            Your username is required.
-                                        </div>
                                     </div>
                                 <hr class="my-4" />
                                 </div>
@@ -158,7 +154,7 @@
                                         >Все суммы прописываются в долларах</small
                                     >
                                     <div class="invalid-feedback">
-                                        Name on card is required
+                                        Это поле обязательно для заполнения
                                     </div>
                                 </div>
 
@@ -174,10 +170,10 @@
                                         required
                                     />
                                     <small class="text-body-secondary"
-                                        >Денги полученные от партнёров</small
+                                        >Деньги полученные от партнёров</small
                                     >
                                     <div class="invalid-feedback">
-                                        Credit card number is required
+                                        Это поле обязательно для заполнения
                                     </div>
                                 </div>
 
@@ -196,7 +192,7 @@
                                         >Деньги собранные с предзаказчиков</small
                                     >
                                     <div class="invalid-feedback">
-                                        Credit card number is required
+                                        Это поле обязательно для заполнения
                                     </div>
                                 </div>
 
@@ -217,7 +213,7 @@
                                         >Кол-во человек</small
                                     >
                                     <div class="invalid-feedback">
-                                        Expiration date required
+                                        Это поле обязательно для заполнения
                                     </div>
                                 </div>
 
@@ -239,7 +235,7 @@
                                         >Балл от 1 до 10</small
                                     >
                                     <div class="invalid-feedback">
-                                        Security code required
+                                        Это поле обязательно для заполнениям
                                     </div>
                                 </div>
 
@@ -260,7 +256,7 @@
                                         >Средний стаж работы</small
                                     >
                                     <div class="invalid-feedback">
-                                        Expiration date required
+                                        Это поле обязательно для заполнения
                                     </div>
                                 </div>
 
@@ -282,7 +278,7 @@
                                         >Балл от 1 до 10</small
                                     >
                                     <div class="invalid-feedback">
-                                        Security code required
+                                        Это поле обязательно для заполнения
                                     </div>
                                 </div>
 
@@ -301,7 +297,7 @@
                                         >Какое-то целое число</small
                                     >
                                     <div class="invalid-feedback">
-                                        Credit card number is required
+                                        Это поле обязательно для заполнения
                                     </div>
                                 </div>
 
@@ -323,7 +319,7 @@
                                         >Балл от 1 до 10</small
                                     >
                                     <div class="invalid-feedback">
-                                        Security code required
+                                        Это поле обязательно для заполнения
                                     </div>
                                 </div>
 
@@ -344,7 +340,7 @@
                                         >Целое число</small
                                     >
                                     <div class="invalid-feedback">
-                                        Security code required
+                                        Это поле обязательно для заполнения
                                     </div>
                                 </div>
 
@@ -356,11 +352,7 @@
                                             class="form-control"
                                             id="username"
                                             placeholder="Замечание по поводу конкуренции"
-                                            required
                                         />
-                                        <div class="invalid-feedback">
-                                            Your username is required.
-                                        </div>
                                     </div>
                                     <hr class="my-4" />
                                 </div>
@@ -384,7 +376,7 @@
                                         >Балл от 1 до 10</small
                                     >
                                     <div class="invalid-feedback">
-                                        Security code required
+                                        Это поле обязательно для заполнения
                                     </div>
                                 </div>
 
@@ -406,7 +398,7 @@
                                         >Балл от 1 до 10</small
                                     >
                                     <div class="invalid-feedback">
-                                        Security code required
+                                        Это поле обязательно для заполнения
                                     </div>
                                 </div>
 
@@ -425,7 +417,7 @@
                                         >Примерное кол-во человек</small
                                     >
                                     <div class="invalid-feedback">
-                                        Credit card number is required
+                                        Это поле обязательно для заполнения
                                     </div>
                                 </div>
 
@@ -444,7 +436,7 @@
                                         >Примерное кол-во человек</small
                                     >
                                     <div class="invalid-feedback">
-                                        Credit card number is required
+                                        Это поле обязательно для заполнения
                                     </div>
                                 </div>
 
@@ -456,11 +448,7 @@
                                             class="form-control"
                                             id="username"
                                             placeholder="Замечание по поводу целевой аудитории и рынка"
-                                            required
                                         />
-                                        <div class="invalid-feedback">
-                                            Your username is required.
-                                        </div>
                                     </div>
                                 </div>
 
