--load update checkout lists

--- a/frontend/pages/checkout/checkout.html
+++ b/frontend/pages/checkout/checkout.html
@@ -240,45 +240,46 @@
                                 </div>
 
                                 <div class="col-md-3">
-                                    <label
-                                        for="cc-expiration"
-                                        class="form-label"
+                                    <label for="country" class="form-label"
                                         >Опыт команды</label
                                     >
-                                    <input
-                                        type="text"
-                                        class="form-control"
-                                        id="cc-expiration"
-                                        placeholder=""
+                                    <select
+                                        class="form-select"
+                                        id="Startup theme"
                                         required
-                                    />
+                                    >
+                                        <option value="">Выбрать...</option>
+                                        <option>Новички</option>
+                                        <option>Средний опыт</option>
+                                        <option>Эксперты</option>
+                                    </select>
                                     <small class="text-body-secondary"
-                                        >Средний стаж работы</small
+                                        >Средний опыт работы</small
                                     >
                                     <div class="invalid-feedback">
-                                        Это поле обязательно для заполнения
+                                        Пожалуйста, выберете корректную тему
                                     </div>
                                 </div>
 
                                 <div class="col-md-3">
-                                    <label for="cc-cvv" class="form-label"
+                                    <label for="country" class="form-label"
                                         >Технологический кэф</label
                                     >
-                                    <input
-                                        type="number"
-                                        min="1"
-                                        max="10"
-                                        step="1"
-                                        class="form-control"
-                                        id="cc-cvv"
-                                        placeholder=""
+                                    <select
+                                        class="form-select"
+                                        id="Startup theme"
                                         required
-                                    />
+                                    >
+                                        <option value="">Выбрать...</option>
+                                        <option>Низкий</option>
+                                        <option>Средний</option>
+                                        <option>Высокий</option>
+                                    </select>
                                     <small class="text-body-secondary"
-                                        >Балл от 1 до 10</small
+                                        >Оценка инноваций</small
                                     >
                                     <div class="invalid-feedback">
-                                        Это поле обязательно для заполнения
+                                        Пожалуйста, выберете корректную тему
                                     </div>
                                 </div>
 
@@ -302,21 +303,21 @@
                                 </div>
 
                                 <div class="col-md-6">
-                                    <label for="cc-cvv" class="form-label"
-                                        >Уровень конкуренции</label
+                                    <label for="country" class="form-label"
+                                        >Оценка конкуренции</label
                                     >
-                                    <input
-                                        type="number"
-                                        min="1"
-                                        max="10"
-                                        step="1"
-                                        class="form-control"
-                                        id="cc-cvv"
-                                        placeholder=""
+                                    <select
+                                        class="form-select"
+                                        id="Startup theme"
                                         required
-                                    />
+                                    >
+                                        <option value="">Выбрать...</option>
+                                        <option>Низкая конкуренция</option>
+                                        <option>Средняя конкуренция</option>
+                                        <option>Высокая конкуренция</option>
+                                    </select>
                                     <small class="text-body-secondary"
-                                        >Балл от 1 до 10</small
+                                        >Примерный уровень конкуренции на рынке</small
                                     >
                                     <div class="invalid-feedback">
                                         Это поле обязательно для заполнения
@@ -358,49 +359,49 @@
                                 </div>
                             <h4 class="mb-3">Характеристики аудитории и спроса</h4>
 
-                                <div class="col-md-6">
-                                    <label for="cc-cvv" class="form-label"
-                                        >Уровень оцениваемой востребованности</label
-                                    >
-                                    <input
-                                        type="number"
-                                        min="1"
-                                        max="10"
-                                        step="1"
-                                        class="form-control"
-                                        id="cc-cvv"
-                                        placeholder=""
-                                        required
-                                    />
-                                    <small class="text-body-secondary"
-                                        >Балл от 1 до 10</small
-                                    >
-                                    <div class="invalid-feedback">
-                                        Это поле обязательно для заполнения
-                                    </div>
+                            <div class="col-md-6">
+                                <label for="country" class="form-label"
+                                    >Уровень оцениваемой востребованности</label
+                                >
+                                <select
+                                    class="form-select"
+                                    id="Startup theme"
+                                    required
+                                >
+                                    <option value="">Выбрать...</option>
+                                    <option>Низкое влияние</option>
+                                    <option>Среднее влияние</option>
+                                    <option>Высокое влияние</option>
+                                </select>
+                                <small class="text-body-secondary"
+                                    >Примерный уровень востребованности на рынке</small
+                                >
+                                <div class="invalid-feedback">
+                                    Это поле обязательно для заполнения
                                 </div>
+                            </div>
 
-                                <div class="col-md-6">
-                                    <label for="cc-cvv" class="form-label"
-                                        >Уровень оцениваемого спроса</label
-                                    >
-                                    <input
-                                        type="number"
-                                        min="1"
-                                        max="10"
-                                        step="1"
-                                        class="form-control"
-                                        id="cc-cvv"
-                                        placeholder=""
-                                        required
-                                    />
-                                    <small class="text-body-secondary"
-                                        >Балл от 1 до 10</small
-                                    >
-                                    <div class="invalid-feedback">
-                                        Это поле обязательно для заполнения
-                                    </div>
+                            <div class="col-md-6">
+                                <label for="country" class="form-label"
+                                    >Оцениваемый уровень спроса</label
+                                >
+                                <select
+                                    class="form-select"
+                                    id="Startup theme"
+                                    required
+                                >
+                                    <option value="">Выбрать...</option>
+                                    <option>Низкий спрос</option>
+                                    <option>Среднйи спрос</option>
+                                    <option>Высокий спрос</option>
+                                </select>
+                                <small class="text-body-secondary"
+                                    >Примерный уровень спроса на рынке</small
+                                >
+                                <div class="invalid-feedback">
+                                    Это поле обязательно для заполнения
                                 </div>
+                            </div>
 
                                 <div class="col-md-6">
                                     <label for="cc-number" class="form-label"
