--load bug-selection_1

--- a/frontend/pages/checkout/checkout.html
+++ b/frontend/pages/checkout/checkout.html
@@ -235,7 +235,7 @@
                                 <select class="form-select" id="DemanIdx" required>
                                     <option value="">Выбрать...</option>
                                     <option>Низкий спрос</option>
-                                    <option>Среднйи спрос</option>
+                                    <option>Средний спрос</option>
                                     <option>Высокий спрос</option>
                                 </select>
                                 <small class="text-body-secondary">Примерный уровень спроса на рынке</small>
