--load big checkout bug fixes

--- a/frontend/pages/checkout/checkout.html
+++ b/frontend/pages/checkout/checkout.html
@@ -26,7 +26,7 @@
                 <!-- <div class="py-5 text-center">
                     <h2>Checkout form</h2>
                     <p class="lead">
-                        Below is an example form built entirely with Bootstrap’s
+                        Below is an example form built entirely with Bootstraps
                         form controls. Each required form group has a validation
                         state that can be triggered by attempting to submit the
                         form without completing it.
@@ -217,8 +217,8 @@
                             <h4 class="mb-3">Характеристики аудитории и спроса</h4>
 
                             <div class="col-md-6">
-                                <label for="DemandLevel" class="form-label" >Уровень оцениваемой востребованности</label>
-                                <select class="form-select" id="DemandLevel" required>
+                                <label for="DemandIdx" class="form-label" >Уровень оцениваемой востребованности</label>
+                                <select class="form-select" id="DemandIdx" required>
                                     <option value="">Выбрать...</option>
                                     <option>Низкое влияние</option>
                                     <option>Среднее влияние</option>
@@ -231,8 +231,8 @@
                             </div>
 
                             <div class="col-md-6">
-                                <label for="DemanIdx" class="form-label">Оцениваемый уровень спроса</label>
-                                <select class="form-select" id="DemanIdx" required>
+                                <label for="DemanLevel" class="form-label">Оцениваемый уровень спроса</label>
+                                <select class="form-select" id="DemandLevel" required>
                                     <option value="">Выбрать...</option>
                                     <option>Низкий спрос</option>
                                     <option>Средний спрос</option>
@@ -284,9 +284,7 @@
                 </div>
             </main>
 
-            <footer
-                class="my-5 pt-5 text-body-secondary text-center text-small"
-            >
+            <footer class="my-5 pt-5 text-body-secondary text-center text-small">
                 <p class="mb-1">&copy; 2017–2024 Company Name</p>
                 <ul class="list-inline">
                     <li class="list-inline-item"><a href="#">Privacy</a></li>
