--- a/frontend/pages/checkout/checkout.html
+++ b/frontend/pages/checkout/checkout.html
@@ -20,9 +20,11 @@
         />
     </head>
     <body>
-
         <div class="container">
             <main>
+                <div class="d-flex justify-content-end mt-3">
+                    <button id="theme-toggle" class="btn btn-secondary">Темная тема</button>
+                </div>
                 <!-- <div class="py-5 text-center">
                     <h2>Checkout form</h2>
                     <p class="lead">
@@ -33,7 +35,6 @@
                     </p>
                     </div> -->
                 <div class="d-flex justify-content-center row g-5">
-                    <hr class="my-4" />
                     <div class="col-md-7 col-lg-8">
                         <h4 class="mb-3">Основная информация</h4>
                         <form class="needs-validation" novalidate>
@@ -303,6 +304,7 @@
             integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
             crossorigin="anonymous"
         ></script>
+        <script src="theme-toggle.js"></script>
         <script src="checkout.js"></script
     </body>
 </html>
