--- a/frontend/pages/project/project.html
+++ b/frontend/pages/project/project.html
@@ -3,13 +3,9 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>model-checkout</title>
+        <title>project</title>
         <link rel="stylesheet" href="project.css" />
-        <link rel="stylesheet" href="../../assets/dist/css/bootstrap.min.css" />
-        <link
-            rel="canonical"
-            href="https://getbootstrap.com/docs/5.3/examples/checkout/"
-        />
+        <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/album/">
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/@docsearch/css@3"
