--- a/frontend/pages/project/project.html
+++ b/frontend/pages/project/project.html
@@ -16,6 +16,7 @@
             crossorigin="anonymous"
         />
         <link rel="stylesheet" href="project.css" />
+        <link rel="stylesheet" href="project-list-groups.css">
     </head>
     <body>
         <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
@@ -93,16 +94,37 @@
               <div class="container-fluid py-5">
                 <h1 class="display-5 fw-bold">Custom jumbotron</h1>
                 <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
-                <button class="btn btn-primary btn-lg" type="button">Example button</button>
               </div>
             </div>
 
             <div class="row mb-4 align-items-md-stretch">
-              <div class="col-md-6">
-                <div class="h-100 p-5 text-bg-dark rounded-3">
-                  <h2>Change the background</h2>
-                  <p>Swap the background-color utility and add a `.text-*` color utility to mix up the jumbotron look. Then, mix and match with additional component themes and more.</p>
-                  <button class="btn btn-outline-light" type="button">Example button</button>
+              <div class="col-md-6 ps-0 pe-3">
+                <div class="h-100 text-bg-dark rounded-3">
+                    <div class="d-flex justify-content-center list-group list-group-checkable gap-2">
+                        <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios" id="listGroupCheckableRadios1" value="" checked>
+                        <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios1">
+                            First radio
+                        <span class="d-block small opacity-50">With support text underneath to add more detail</span>
+                        </label>
+
+                        <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios" id="listGroupCheckableRadios2" value="">
+                        <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios2">
+                            Second radio
+                            <span class="d-block small opacity-50">Some other text goes here</span>
+                        </label>
+
+                        <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios" id="listGroupCheckableRadios3" value="">
+                        <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios3">
+                            Third radio
+                            <span class="d-block small opacity-50">And we end with another snippet of text</span>
+                        </label>
+
+                        <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios" id="listGroupCheckableRadios4" value="" disabled>
+                        <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios4">
+                            Fourth disabled radio
+                            <span class="d-block small opacity-50">This option is disabled</span>
+                        </label>
+                    </div>
                 </div>
               </div>
 
@@ -145,6 +167,7 @@
               &copy; 2024
             </footer>
         </div>
+
 
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
