--bug fix list group

--- a/frontend/pages/project/project.html
+++ b/frontend/pages/project/project.html
@@ -98,9 +98,9 @@
             </div>
 
             <div class="row mb-4 align-items-md-stretch">
-              <div class="col-md-6 ps-0 pe-3">
-                <div class="h-100 text-bg-dark rounded-3">
-                    <div class="d-flex justify-content-center list-group list-group-checkable gap-2">
+              <div class="col-md-6">
+                <div class="h-100 rounded-3">
+                    <div class="m-0 d-flex justify-content-center list-group list-group-checkable gap-2">
                         <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios" id="listGroupCheckableRadios1" value="" checked>
                         <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios1">
                             First radio
