--- a/frontend/pages/project/project.html
+++ b/frontend/pages/project/project.html
@@ -124,13 +124,19 @@
                             Синтетические предсказания
                             <span class="d-block small opacity-50">Пока эта опция в разработке</span>
                         </label>
+
+                        <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios" id="listGroupCheckableRadios4" value="" disabled>
+                        <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios4">
+                            Синтетические предсказания
+                            <span class="d-block small opacity-50">Пока эта опция в разработке</span>
+                        </label>
                     </div>
                 </div>
               </div>
 
               <div class="col-md-6">
                 <div class="h-100 p-5 bg-body-tertiary border rounded-3">
-                    <div>
+                    <div id="chart-container">
                         <canvas id="myChart"></canvas>
                     </div>
                 </div>
