--init ltl chg in blocks

--- a/frontend/pages/project/project.html
+++ b/frontend/pages/project/project.html
@@ -113,7 +113,7 @@
                             <span class="d-block small opacity-50">Предсказания, основанные на временных рядах</span>
                         </label>
 
-                        <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios" id="listGroupCheckableRadios3" value="">
+                        <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios" id="listGroupCheckableRadios3" value="" disabled>
                         <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios3">
                             Синтетические предсказания на временных рядах
                             <span class="d-block small opacity-50">Предсказания, основанные на синтетическом датасете</span>
@@ -133,6 +133,24 @@
                     <div id="chart-container">
                         <canvas id="myChart"></canvas>
                     </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row align-items-md-stretch">
+                <div class="col-md-6 mb-4">
+                  <div class="h-100 p-5 bg-body-tertiary border rounded-3">
+                    <h2>Add borders</h2>
+                    <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both column's content for equal-height.</p>
+                    <button class="btn btn-outline-secondary" type="button">Example button</button>
+                  </div>
+                </div>
+
+              <div class="col-md-6 mb-4">
+                <div class="h-100 p-5 border rounded-3">
+                  <h2>Change the background</h2>
+                  <p>Swap the background-color utility and add a `.text-*` color utility to mix up the jumbotron look. Then, mix and match with additional component themes and more.</p>
+                  <button class="btn btn-outline-light" type="button">Example button</button>
                 </div>
               </div>
             </div>
