--- a/frontend/pages/project/project.html
+++ b/frontend/pages/project/project.html
@@ -140,9 +140,9 @@
             <div class="row align-items-md-stretch">
                 <div class="col-md-6 mb-4">
                   <div class="h-100 p-5 bg-body-tertiary border rounded-3">
-                    <h2>Add borders</h2>
-                    <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both column's content for equal-height.</p>
-                    <button class="btn btn-outline-secondary" type="button">Example button</button>
+                    <div class="donut-container">
+                        <canvas id="donutChart"></canvas>
+                    </div>
                   </div>
                 </div>
 
@@ -226,5 +226,6 @@
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <script src="theme-toggle.js"></script>
         <script src="firstchart.js"></script>
+        <script src="donutchart.js"></script>
     </body>
 </html>
