--- a/frontend/pages/project/project.html
+++ b/frontend/pages/project/project.html
@@ -150,7 +150,7 @@
                 <div class="h-100 p-5 border rounded-3">
                   <h2>Change the background</h2>
                   <p>Swap the background-color utility and add a `.text-*` color utility to mix up the jumbotron look. Then, mix and match with additional component themes and more.</p>
-                  <button class="btn btn-outline-light" type="button">Example button</button>
+                  <button class="btn btn-outline-secondary" type="button">Example button</button>
                 </div>
               </div>
             </div>
@@ -164,7 +164,7 @@
             </div>
 
             <div class="row align-items-md-stretch">
-              <div class="col-md-6">
+              <div class="col-md-6 mb-4">
                 <div class="h-100 p-5 text-bg-dark rounded-3">
                   <h2>Change the background</h2>
                   <p>Swap the background-color utility and add a `.text-*` color utility to mix up the jumbotron look. Then, mix and match with additional component themes and more.</p>
